--- a/src/scss/components/form-panel.scss
+++ b/src/scss/components/form-panel.scss
@@ -13,7 +13,7 @@
     backdrop-filter: blur(20px);
     background:rgba(0,0,0,0.95);
     @media (min-width:$desktop-viewport) {
-        max-width: calc(100% - 200px);
+        //max-width: calc(100% - 200px);
     }
 
 
